@@ -1,3 +1,8 @@
+2012-01-27  Valek Filippov <frob@df.ru>
+
+	* Fixed 'goto'
+	* Added search.
+
 2012-01-23  Valek Filippov <frob@df.ru>
 
 	* Added support for 'Tab'
